K8's Manifest Files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stylehub-service
spec:
  type: NodePort
  selector:
    app: stylehub
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
